--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <label for="lastname">Last name:</label>
             <input type="text" id="lastname" name="lastname"><br><br>
             <label for="gender">Gender:</label>
-
-            <input type="radio" id="gender" name="gender">Male
-            <input type="radio" id="gender" name="gender">Female
+            <input type="radio" id="gender" name="gender">
+            <label for="">Male</label>
+            <input type="radio" id="gender" name="gender">
+            <label for="">Female</label>
             <br>
-            <br>
-            
+            <br> 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email"><br><br>
             <label for="date">Date of Birth:</label>
