--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <label for="date">Date of Birth:</label>
             <input type="date" id="date" name="date"><br><br>
             <label for="address">Address:</label><br>
-            <textarea name="address" id="address"></textarea><br><br>
+            <textarea name="address" id="address" rows="2" cols="28"></textarea><br><br>
             <input type="submit" value="Submit">
             
     </fieldset>
